--- a/angular/alurapic/src/app/app.component.html
+++ b/angular/alurapic/src/app/app.component.html
@@ -1,2 +1,5 @@
-{{ title }}
-<img [src]="url" [alt]="description"/>
+<ap-photo 
+    *ngFor="let photo of photos"
+    [url]="photo.url"
+    [description]="photo.description">
+</ap-photo>
