--- a/angular/alurapic/src/app/photos/photo-list/photo-list.component.html
+++ b/angular/alurapic/src/app/photos/photo-list/photo-list.component.html
@@ -5,8 +5,7 @@
             type="search" 
             placeholder="search..." 
             autofocus
-            (keyup)="debounce.next($event.target.value)"
-            >
+            (keyup)="debounce.next($event.target.value)">
     </form>
 </div>
 
