--- a/angular/alurapic/src/app/core/header/header.component.html
+++ b/angular/alurapic/src/app/core/header/header.component.html
@@ -2,8 +2,9 @@
     <nav class="navbar navbar-light bg-white">
         <a class="navbar-brand">ALURAPIC</a>
         <div *ngIf="(user$ | async) as user; else login">
-            <i class="fa fa-user-circle"></i>
-            <a class="ml-2">{{ user.name }}</a>
+            <i class="fa fa-user-circle mr-1"></i>
+            <a class="mr-1">{{ user.name }}</a>
+            <a (click)="logout()">(Logout)</a>
         </div>
 
         <ng-template #login>
