--- a/angular/alurapic/src/app/home/signup/signup.component.html
+++ b/angular/alurapic/src/app/home/signup/signup.component.html
@@ -36,7 +36,7 @@
             text="Username is required!">
         </ap-vmessage>
         <ap-vmessage
-        *ngIf="signupForm.get('userName').errors?.pattern"
+        *ngIf="signupForm.get('userName').errors?.lowerCase"
         text="Must be lowercase">
         </ap-vmessage>
         <ap-vmessage
