--- a/angular/alurapic/src/app/photos/photo-details/photo-details.component.html
+++ b/angular/alurapic/src/app/photos/photo-details/photo-details.component.html
@@ -13,7 +13,10 @@
                 </div>
                 <hr>
             </small>
-            <ap-photo-comments [photoId]="photoId"></ap-photo-comments>
+            <ap-photo-comments *ngIf="photo.allowComments; else warning" [photoId]="photoId"></ap-photo-comments>
+            <ng-template #warning>
+                <p>User has disabled comments for this photo!</p>
+            </ng-template>
         </div>
     </div>
 </div>
